Auth back end supabase cfg

--- a/.github/.copilot-clean-architecture.md
+++ b/.github/.copilot-clean-architecture.md
@@ -1,6 +1,6 @@
 ---
 description: APPLY Clean Architecture principles WHEN organizing code in backend
-globs: apps/backend/**, src/**/*.php
+globs: apps/backend/**
 alwaysApply: true
 ---
 
